syntax = "proto3";

package greetpb;

option go_package = "github.com/NikeshSapkota01/learningGrpc/greet";

// Request and Response for the Greet RPC
message GreetRequest {
  string first_name = 1;
  string last_name = 2;
}

message GreetResponse { 
  string message = 1; 
}

// Request and Response for the ServerGreetStream RPC (Server Streaming)
message ServerGreetStreamRequest {
  string first_name = 1;
  string last_name = 2;
}

message ServerGreetStreamResponse { 
  string message = 1; 
}

// Service definition for Greet functionality
service GreetService {
  // Unary RPC
  rpc Greet(GreetRequest) returns (GreetResponse) {}

  // Server Streaming RPC
  rpc ServerGreetStream(ServerGreetStreamRequest) returns (stream ServerGreetStreamResponse) {}
}
